--- a/gui/templates/main.html
+++ b/gui/templates/main.html
@@ -40,7 +40,7 @@
       <ul align="center">
         <li> IP Address:              <input type="text" name="ip_address"></li>
         <li> Port:                    <input type="text" name="port"></li>
-        <li> Number of connections:   <input type="text" name="conn_number"></li>
+        <li> Timeout before start(s): <input type="text" name="conn_number"></li>
         <li> Number of requests:      <input type="text" name="req_number"></li>
         <li> Request:                 <input type="text" name="requ"></li>
       </ul>
